# Minecraft_StatBuddy

./: .gitignore  Cargo.toml  MinecraftStatBuddy.js  README.md  commands_rcon.txt  package-lock.json  package.json
commands/: getIP.js
db/migrations/: 0001_initial_schema.sql
events/: interactionCreate.js
res/: statbuddy.xcf
src/: commands.rs  constants.rs  db.rs  dbfuncs.rs  main.rs  rconfuncs.rs
src/commands/: getip.rs  getstat.rs  ip.rs  mod.rs  stat.rs
