[package]
name = "mc_statbuddy"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
rcon = { version  ="0.6.0", features = ["rt-async-std"] }
regex = "1.11.1"
reqwest = { version = "0.12.12"}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = {version = "1.0.138"}
serenity = "0.12.4"
sqlx = { version = "0.8.3", features = ["sqlite", "macros", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["net", "sync", "time", "rt-multi-thread"] }
