[package]
name = "mc_statbuddy"
version = "1.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
rcon = { version  ="0.6.0", features = ["rt-async-std"] }
regex = "1.11.1"
reqwest = { version = "0.12.18"}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = {version = "1.0.140"}
serenity = "0.12.4"
sqlx = { version = "0.8.6", features = ["sqlite", "macros", "runtime-tokio"] }
tokio = { version = "1.45.1", features = ["net", "sync", "time", "rt-multi-thread"] }
winres = "0.1.12"
